Update: production parameters